<resources>
    <string name="app_name" translatable="false">Currency Converter</string>
    <string name="label_converter">Converter</string>
    <string name="label_popular">Popular</string>
    <string name="label_history">History</string>
    <string name="label_settings">Settings</string>
    <string name="label_chooser">Chooser</string>
    <string name="label_dropdown">Dropdown menu</string>
    <string name="title_miscellaneous">Miscellaneous</string>
    <string name="key_miscellaneous" translatable="false">miscellaneous</string>
    <string name="key_chooser" translatable="false">chooser</string>
    <string name="title_chooser">Chooser</string>
    <string name="summary_chooser">Currency name, dropdown menu</string>
    <string name="key_dropdown_menu" translatable="false">dropdown_menu</string>
    <string name="title_dropdown_menu">Dropdown menu</string>
    <string name="summary_dropdown_menu">Dropdown menu, scrollbar</string>
    <string name="key_auto_hide_scrollbar" translatable="false">autohide_scrollbar</string>
    <string name="title_auto_hide_scrollbar">Auto-hide scrollbar</string>
    <string name="key_show_scrollbar" translatable="false">show_scrollbar</string>
    <string name="title_show_scrollbar">Show scrollbar</string>
    <string name="key_extend_chooser_landscape" translatable="false">extend_chooser_landscape</string>
    <string name="title_extend_chooser_landscape">Extend dropdown menu in landscape mode</string>
    <string name="key_theme" translatable="false">theme</string>
    <string name="title_theme">Theme</string>
    <string name="key_ignore_failed_db_update" translatable="false">ignore_failed_db_update</string>
    <string name="title_ignore_failed_db_update">Ignore failed database update notifications</string>
    <string name="key_language" translatable="false">language</string>
    <string name="title_language">Language</string>
    <string name="key_filter_by" translatable="false">filter_by</string>
    <string name="title_filter_by">Search by</string>
    <string name="key_ui_name" translatable="false">currency_name</string>
    <string name="title_ui_name">Show currency name as</string>
    <string name="bosnian_name">Bosnian</string>
    <string name="bosnian_value" translatable="false">BOSNIAN</string>
    <string name="english_name">English</string>
    <string name="english_value" translatable="false">ENGLISH</string>
    <string name="german_name">German</string>
    <string name="german_value" translatable="false">GERMAN</string>
    <string name="code_name">Currency code</string>
    <string name="code_value" translatable="false">CODE</string>
    <string name="name_name">Currency name</string>
    <string name="name_value" translatable="false">NAME</string>
    <string name="code_and_name_name">Currency code and name</string>
    <string name="code_and_name_value" translatable="false">BOTH</string>
    <string name="code_only_name">Code only</string>
    <string name="code_only_value" translatable="false">CODE</string>
    <string name="name_only_name">Name only </string>
    <string name="name_only_value" translatable="false">NAME</string>
    <string name="both_code_and_name_name">Code and name</string>
    <string name="both_code_and_name_value" translatable="false">CODE_AND_NAME</string>
    <string name="both_name_and_code_name">Name and code</string>
    <string name="both_name_and_code_value" translatable="false">NAME_AND_CODE</string>
    <string name="light_name">Light</string>
    <string name="dark_name">Dark</string>
    <string name="device_name">Device</string>
    <string name="light_value" translatable="false">LIGHT</string>
    <string name="dark_value" translatable="false">DARK</string>
    <string name="device_value" translatable="false">DEVICE</string>
    <string name="img_description_country_flag">Country flag</string>
    <string name="img_description_expand">Expand</string>
    <string name="search_hint">Currency</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="last_updated">Last updated: %s</string>
    <string name="empty_tray">Empty tray</string>
    <string name="database_exception_caught_message">A fatal database error occurred, please restart the app. If the problem persists please reinstall the app.</string>
    <string name="database_exception_caught_title">Fatal error</string>
    <string name="database_exception_caught_positive_button">OK</string>
    <string name="database_update_failed_message">Database could not update. It is advised to restart the app. If the problem persists, please reinstall the app.</string>
    <string name="database_update_failed_title">Database update failed</string>
    <string name="database_update_failed_positive_button">OK</string>
    <string name="database_update_failed_negative_button">Ignore</string>
    <string name="currency_united_arab_emirates">United Arab Emirates Dirham</string>
    <string name="currency_afghanistan">Afghan Afghani</string>
    <string name="currency_albania">Albanian Lek</string>
    <string name="currency_armenia">Armenian Dram</string>
    <string name="currency_netherlands">Netherlands Antillean Guilder</string>
    <string name="currency_angola">Angolan Kwanza</string>
    <string name="currency_argentina">Argentine Peso</string>
    <string name="currency_australia">Australian Dollar</string>
    <string name="currency_aruba">Aruban Florin</string>
    <string name="currency_azerbaijan">Azerbaijani Manat</string>
    <string name="currency_bosnia_and_herzegovina">Bosnia-Herzegovina Convertible Mark</string>
    <string name="currency_barbados">Barbadian Dollar</string>
    <string name="currency_bangladesh">Bangladeshi Taka</string>
    <string name="currency_bulgaria">Bulgarian Lev</string>
    <string name="currency_bahrain">Bahraini Dinar</string>
    <string name="currency_burundi">Burundian Franc</string>
    <string name="currency_bermuda">Bermudan Dollar</string>
    <string name="currency_brunei">Brunei Dollar</string>
    <string name="currency_bolivia">Bolivian Boliviano</string>
    <string name="currency_brazil">Brazilian Real</string>
    <string name="currency_bahamas">Bahamian Dollar</string>
    <string name="currency_bitcoin" translatable="false">Bitcoin</string>
    <string name="currency_bhutan">Bhutanese Ngultrum</string>
    <string name="currency_botswana">Botswanan Pula</string>
    <string name="currency_belarus">Belarusian Ruble</string>
    <string name="currency_belize">Belize Dollar</string>
    <string name="currency_canada">Canadian Dollar</string>
    <string name="currency_democratic_republic_of_the_congo">Congolese Franc</string>
    <string name="currency_switzerland">Swiss Franc</string>
    <string name="currency_chile_uf">Chilean Unit of Account (UF)</string>
    <string name="currency_chile">Chilean Peso</string>
    <string name="currency_china_offshore">Chinese Yuan (Offshore)</string>
    <string name="currency_china">Chinese Yuan</string>
    <string name="currency_colombia">Colombian Peso</string>
    <string name="currency_costa_rica">Costa Rican Colón</string>
    <string name="currency_cuba_convertible">Cuban Convertible Peso</string>
    <string name="currency_cuba">Cuban Peso</string>
    <string name="currency_cape_verde">Cape Verdean Escudo</string>
    <string name="currency_czech_republic">Czech Republic Koruna</string>
    <string name="currency_djibouti">Djiboutian Franc</string>
    <string name="currency_denmark">Danish Krone</string>
    <string name="currency_dominican_republik">Dominican Peso</string>
    <string name="currency_algeria">Algerian Dinar</string>
    <string name="currency_egypt">Egyptian Pound</string>
    <string name="currency_eritrea">Eritrean Nakfa</string>
    <string name="currency_ethiopia">Ethiopian Birr</string>
    <string name="currency_european_union" translatable="false">Euro</string>
    <string name="currency_fiji">Fijian Dollar</string>
    <string name="currency_falkland_islands">Falkland Islands Pound</string>
    <string name="currency_united_kingdom">British Pound Sterling</string>
    <string name="currency_georgia">Georgian Lari</string>
    <string name="currency_guersney">Guernsey Pound</string>
    <string name="currency_ghana">Ghanaian Cedi</string>
    <string name="currency_gibraltar">Gibraltar Pound</string>
    <string name="currency_gambia">Gambian Dalasi</string>
    <string name="currency_guinea">Guinean Franc</string>
    <string name="currency_guatemala">Guatemalan Quetzal</string>
    <string name="currency_guyana">Guyanaese Dollar</string>
    <string name="currency_hong_kong">Hong Kong Dollar</string>
    <string name="currency_honduras">Honduran Lempira</string>
    <string name="currency_croatia">Croatian Kuna</string>
    <string name="currency_haiti">Haitian Gourde</string>
    <string name="currency_hungary">Hungarian Forint</string>
    <string name="currency_indonesia">Indonesian Rupiah</string>
    <string name="currency_israel">Israeli New Sheqel</string>
    <string name="currency_isle_of_man">Manx pound</string>
    <string name="currency_india">Indian Rupee</string>
    <string name="currency_iraq">Iraqi Dinar</string>
    <string name="currency_iran">Iranian Rial</string>
    <string name="currency_iceland">Icelandic Króna</string>
    <string name="currency_jersey">Jersey Pound</string>
    <string name="currency_jamaica">Jamaican Dollar</string>
    <string name="currency_jordan">Jordanian Dinar</string>
    <string name="currency_japan">Japanese Yen</string>
    <string name="currency_kenya">Kenyan Shilling</string>
    <string name="currency_kyrgyzstan">Kyrgystani Som</string>
    <string name="currency_cambodia">Cambodian Riel</string>
    <string name="currency_comoros">Comorian Franc</string>
    <string name="currency_north_korea">North Korean Won</string>
    <string name="currency_south_korea">South Korean Won</string>
    <string name="currency_kuwait">Kuwaiti Dinar</string>
    <string name="currency_cayman_islands">Cayman Islands Dollar</string>
    <string name="currency_kazakhstan">Kazakhstani Tenge</string>
    <string name="currency_laos">Laotian Kip</string>
    <string name="currency_lebanon">Lebanese Pound</string>
    <string name="currency_sri_lanka">Sri Lankan Rupee</string>
    <string name="currency_liberia">Liberian Dollar</string>
    <string name="currency_lesotho">Lesotho Loti</string>
    <string name="currency_libya">Libyan Dinar</string>
    <string name="currency_morocco">Moroccan Dirham</string>
    <string name="currency_moldova">Moldovan Leu</string>
    <string name="currency_madagascar">Malagasy Ariary</string>
    <string name="currency_north_macedonia">Macedonian Denar</string>
    <string name="currency_myanmar">Myanmar Kyat</string>
    <string name="currency_mongolia">Mongolian Tögrög</string>
    <string name="currency_macau">Macanese Pataca</string>
    <string name="currency_mauritania">Mauritanian Ouguiya</string>
    <string name="currency_mauritius">Mauritian Rupee</string>
    <string name="currency_maldives">Maldivian Rufiyaa</string>
    <string name="currency_malawi">Malawian Kwacha</string>
    <string name="currency_mexico">Mexican Peso</string>
    <string name="currency_malaysia">Malaysian Ringgit</string>
    <string name="currency_mozambique">Mozambican Metical</string>
    <string name="currency_namibia">Namibian Dollar</string>
    <string name="currency_nigeria">Nigerian Naira</string>
    <string name="currency_nicaragua">Nicaraguan Córdoba</string>
    <string name="currency_norway">Norwegian Krone</string>
    <string name="currency_nepal">Nepalese Rupee</string>
    <string name="currency_new_zealand">New Zealand Dollar</string>
    <string name="currency_oman">Omani Rial</string>
    <string name="currency_panama">Panamanian Balboa</string>
    <string name="close">Close</string>
    <string name="heart">A heart</string>
</resources>