<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="showOnlyFavorites"
            type="Boolean" />

        <variable
            name="showScrollbar"
            type="Boolean" />

        <variable
            name="extended"
            type="Boolean" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dropdown_menu_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:cardElevation="20dp"
        app:customMargin="@{extended ? @dimen/margin_material_card_extended : @dimen/margin_material_card_normal}"
        app:extended="@{extended}"
        tools:visibility="visible">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dropdown_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:listitem="@layout/dropdown_item">

            <EditText
                android:id="@+id/currencies_searcher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/border_edit_text"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/search_hint"
                android:importantForAutofill="no"
                android:inputType="text|textNoSuggestions"
                android:paddingStart="12dp"
                android:paddingTop="13dp"
                android:paddingEnd="45dp"
                android:paddingBottom="13dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_edit_text"
                android:textSize="16sp"
                app:customMarginEnd="@{showScrollbar ? @dimen/margin_scroller : @dimen/margin_no_scroller}"
                app:layout_constraintEnd_toStartOf="@+id/favorites"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/reset_searcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/currencies_searcher"
                android:layout_alignEnd="@id/currencies_searcher"
                android:layout_alignBottom="@id/currencies_searcher"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ripple_reset_searcher_btn"
                android:contentDescription="@string/close"
                android:padding="9dp"
                android:src="@drawable/ic_close"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/currencies_searcher"
                app:layout_constraintEnd_toEndOf="@+id/currencies_searcher"
                app:layout_constraintTop_toTopOf="@+id/currencies_searcher"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/heart"
                android:paddingStart="@{showScrollbar ? @dimen/favorite_padding_scroller : @dimen/favorite_padding_no_scroller}"
                android:paddingTop="@dimen/favorite_padding_scroller"
                android:paddingEnd="@{showScrollbar ? @dimen/favorite_padding_scroller : @dimen/favorite_padding_no_scroller}"
                android:paddingBottom="@dimen/favorite_padding_scroller"
                app:customMarginEnd="@{showScrollbar ? @dimen/margin_scroller : @dimen/margin_no_scroller}"
                app:layout_constraintBottom_toBottomOf="@+id/currencies_searcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/currencies_searcher" />

            <ImageButton
                android:id="@+id/favorites_animation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:focusable="false"
                android:paddingStart="@{showScrollbar ? @dimen/favorite_animation_padding_scroller : @dimen/favorite_animation_padding_no_scroller}"
                android:paddingTop="@dimen/favorite_animation_padding_scroller"
                android:paddingEnd="@{showScrollbar ? @dimen/favorite_animation_padding_scroller : @dimen/favorite_animation_padding_no_scroller}"
                android:paddingBottom="@dimen/favorite_animation_padding_scroller"
                android:src="@drawable/ic_favorite_empty"
                app:customMarginEnd="@{showScrollbar ? @dimen/margin_scroller : @dimen/margin_no_scroller}"
                app:favoritesIcon="@{showOnlyFavorites}"
                app:layout_constraintBottom_toBottomOf="@+id/currencies_searcher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/currencies_searcher"
                tools:ignore="ContentDescription" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="9dp"
                android:background="@drawable/divider_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currencies_searcher"
                tools:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/currencies_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:layout_constraintVertical_bias="0.0">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/currencies"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    tools:itemCount="4"
                    tools:listitem="@layout/dropdown_item"
                    tools:visibility="visible" />

                <LinearLayout
                    android:id="@+id/currencies_empty_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/currencies_empty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/empty_tray"
                        android:src="@drawable/ic_empty_tray" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>